修改专辑、音频课程播放按钮

--- a/wechat/src/main/webapp/xcview/html/live_album.html
+++ b/wechat/src/main/webapp/xcview/html/live_album.html
@@ -150,6 +150,8 @@
 		display: none !important;
 	}
 	.ccH5PlayBtn{
+		width: 80px !important;
+		height: 80px !important;
 		background: url(/xcview/images/play_btn.png) no-repeat !important;
 	    background-size: 1.2rem 1.2rem !important;
 	}
