--- a/wechat/src/main/webapp/xcview/html/live_audio.html
+++ b/wechat/src/main/webapp/xcview/html/live_audio.html
@@ -48,7 +48,6 @@
 </style>
 <style type="text/css">
 	.ccH5playerBox section{
- 		/*background: red;*/
 	    bottom: -1rem;
 	    z-index: 999999;
 	    opacity: 1;
@@ -70,13 +69,12 @@
  	.hide{
 		display: none !important;
 	}
-	.play_video img{
-		/*z-index: 1;*/
+	.ccH5PlayBtn{
+		width: 80px !important;
+		height: 80px !important;
+		background: url(/xcview/images/play_btn.png) no-repeat !important;
+	    background-size: 1.2rem 1.2rem !important;
 	}
-	/*
-	.ccH5FullsBtn{
-		display: none;
-	}*/
 </style>
 <body style="background:#F8F8F8;">
 <div class="wp">
