语音直播添加关注，取消关注

--- a/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
+++ b/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
@@ -20,6 +20,7 @@
 <link rel="stylesheet" href="/xcview/html/physician/voice/style/main.css">
 <!--刷新 -->
 <link rel="stylesheet" href="/xcview/css/minirefresh/minirefresh.css?version=71e5ea2f95&version=71e5ea2f95&version=71e5ea2f95">
+<link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/> <!-- 公用弹框 -->
 <script type="text/javascript" src="/xcview/js/minirefresh/minirefresh.js?version=db3081c0a1&version=db3081c0a1&version=db3081c0a1"></script>
 
 <script>
@@ -430,6 +431,7 @@
 <script src="https://cdn.bootcss.com/lodash.js/4.17.10/lodash.min.js"></script>
 <script src="/xcview/html/physician/voice/js/main.js"></script>
 <!-- 语音直播引用文件结束 -->
+<script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
 
 <script>
 window.onload = function(){
