--- a/online-web/src/main/webapp/web/html/ccvideo/video.html
+++ b/online-web/src/main/webapp/web/html/ccvideo/video.html
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" type="text/css" href="../simditor-1.0.5/styles/simditor.css" />
 		<link rel="stylesheet" type="text/css" href="/web/css/video.css" />
 		<script src="/web/js/jquery-1.12.1.js" type="text/javascript" charset="utf-8"></script>
+		<!-- <script src="/web/js/common_msg.js?version=ce867abddd" type="text/javascript"></script> -->
 		<script src="/web/js/artTemplate.js" type="text/javascript" charset="utf-8"></script>
 		<script src="/web/js/jquery.pagination.js"></script>
 		<script type="text/javascript" src="/web/js/jquery.dotdotdot.js"></script>
