--- a/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
+++ b/wechat/src/main/webapp/xcview/html/physician/voice_broadcast.html
@@ -133,18 +133,22 @@
 				<div class="anchor_message_name">{{items.name}}</div>
 				<div class="anchor_message_number">{{items.learndCount}}人<span class="subscribe">预约</span><span class="live_streaming"><div class="live_streaming_dot"></div>直播中</span></div>
 			</div>
-			<!--0 未关注 1 关注 -->
+			<!--0 未关注 1 关注 
 			{{if items.isFocus == 1}}
 				<div class="booking_person booking_person_bg">
 					<img src="/xcview/images/weigz.png" alt="" />
 					<p>00加关注</p>
 				</div>
 			{{else}}
-				<div class="booking_person booking_person_bg" style="    background: rgb(187, 187, 187);">
+				<div class="booking_person booking_person_bg" style="background: rgb(187, 187, 187);">
 					<img src="/xcview/images/yigz.png" alt="" />
-					<p>已关注</p>
+					<p>11已关注</p>
 				</div>
-			{{/if}}
+			{{/if}}-->
+			<div class="booking_person booking_person_bg"data-lecturerid="{{items.userLecturerId}}">
+				<img src="/xcview/images/weigz.png" alt="" />
+				<p>加关注</p>
+			</div>
 			
 			</script>
 		</div>
