--- a/wechat/src/main/webapp/xcview/html/school_audio.html
+++ b/wechat/src/main/webapp/xcview/html/school_audio.html
@@ -469,7 +469,7 @@
 </div>
 	
 	<!--分享开始-->
-	<div class="share">
+	<div class="share" style="display: none !important">
 		<div class="share_bg"></div>
 		<div class="share_main">
 			<div class="share_main_bg">
