--- a/wechat/src/main/webapp/xcview/html/shop/shop-refund.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-refund.html
@@ -41,8 +41,83 @@
 				</ul>
 			</div>
 			<div class="ferund-centent">
-				
+				<div class="progress-bar-img">
+					<img src="/xcview/images/progress-bar.png" alt="进度条" />
+				</div>
+				<div class="acceptance-status">
+					<div class="acceptance-left z">
+						<span>卖家退款</span>
+						<p>2018-7-30 20:15</p>
+					</div>
+					<div class="acceptance-middle z">
+						<span>银行受理</span>
+						<p>2018-7-30 20:15</p>
+					</div>
+					<div class="acceptance-right y">
+						<span>退款成功</span>
+						<p>2018-7-30 20:15</p>
+					</div>
+				</div>
 			</div>
+			<div class="see-mode">
+				<p>查看完整协商记录</p>
+				<img src="/xcview/images/rightj.png" />
+			</div>
+			<!--退款信息-->
+			<div class="refund-inf-wrap">
+				<div class="refund-title-inf">
+					<p>退款信息</p>
+				</div>
+				<div class="refund-ware-modal">
+					<div class="ware-img z">
+						<img src="/xcview/images/regards.png"/>
+					</div>
+					<div class="ware-right-data y">
+						<p class="ware-title">汉方气血茶好气色喝回来非一般的红枣枸杞茶</p>
+						<p class="ware-save">礼盒（库存100件）</p>
+						<p class="ware-price">￥1080.00<span>x1</span></p>
+					</div>
+				</div>
+				<div class="refund-reason">
+					<ul>
+						<li>
+							<span>退款原因：</span>
+							<span>其他</span>
+						</li>
+						<li>
+							<span>退款方式：</span>
+							<span>退货退款</span>
+						</li>
+						<li>
+							<span>退款金额：</span>
+							<span>￥0.01</span>
+						</li>
+						<li>
+							<span>申请时间：</span>
+							<span>2018-10-20 12:00</span>
+						</li>
+						<li>
+							<span>退款编号：</span>
+							<span>10455287345247491</span>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="refund-bottom">
+				<div class="refund-jump">
+					<img src="/xcview/images/zixun.png"/>
+					<p>联系客服</p>
+				</div>
+			</div>
+			
+			
+			
+			
+			
+			
+			
+			
+			
 		</div>
 		
 		
