--- a/wechat/src/main/webapp/xcview/html/shop/shop-logistics.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-logistics.html
@@ -24,6 +24,12 @@
 				<div class="header">
 					<img class="return-img" src="/xcview/images/screen_close.png" alt="返回" />
 					<h3>物流信息</h3>
+					<div class="news-wrap">
+						<a href="">
+							<img class="news-img" src="/xcview/images/xiaoxi.png" alt="消息" />
+							<p class="news-num">12</p>
+						</a>
+					</div>
 				</div>				
 			</div>
 			<div class="ware-main">
@@ -57,12 +63,21 @@
 							<p>9-1</p>
 							<p>02:43</p>
 						</li>
+						<li>
+							<p>9-1</p>
+							<p>02:43</p>
+						</li>
 					</ul>
 				</div>
 				
 				<!--物流地址-->
 				<div class="logistics-right-address y">
 					<ul>
+						<li>
+							<span class="location-line z"></span>
+							<p class="address-text z">[收货地址]海南省海口市美兰区 演丰镇瑶城一路D栋心承智慧大厦</p>
+							<span class="location-icon"></span>
+						</li>
 						<li>
 							<span class="location-line z"></span>
 							<p class="address-text z">[收货地址]海南省海口市美兰区 演丰镇瑶城一路D栋心承智慧大厦</p>
