--- a/wechat/src/main/webapp/xcview/html/shop/shop-refund-apply.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-refund-apply.html
@@ -42,7 +42,7 @@
 			<div class="refund-select">
 				<ul>
 					<li>
-						<a href="">
+						<a href="/xcview/html/shop/shop-refund-only.html">
 							<span>仅退货</span>
 							<p>未收到货（包含未签收），或卖家协商同意前提下</p>
 							<img src="/xcview/images/rightj.png" alt="跳转" />
