--- a/wechat/src/main/webapp/xcview/html/shop/search_listings.html
+++ b/wechat/src/main/webapp/xcview/html/shop/search_listings.html
@@ -25,18 +25,16 @@
 	}	
 </script>
 <link rel="stylesheet" type="text/css" href="/xcview/css/popups.css"/> <!-- 公用弹框 -->
-<link rel="stylesheet" href="/xcview/css/shop/swiper.min.css" />  <!-- 轮播引入 -->
-<link rel="stylesheet" href="/xcview/css/shop/shop.css" />
-
-<style>
-	
-</style>
+<link rel="stylesheet" href="/xcview/css/shop/search_listings.css" />
 </head>
 
 <body>
 	<!-- 头部区域开始 -->
 	<header>
-		<div class="header" onclick="location.href ='/xcview/html/shop/search_goods.html'">
+		<div class="return" onclick="location.href ='/xcview/html/shop/shop.html'">
+			<img src="/xcview/images/backicon.png" alt="" />
+		</div>
+		<div class="header">
 			<img src="/xcview/images/sousuo0.png" alt="" />
 			<span calss="header_default">搜索好货</span>
 			<span calss="tacitly_approve">搜索好货</span>
@@ -49,39 +47,27 @@
 	<div class="header_hidden_field"></div>
 	<!-- 头部区域结束 -->
 
-	<!-- 轮播区域开始 -->
-	<div class="banner">
-		<div class="swiper-wrapper">
-			<div class="swiper-slide"><img src="http://test-file.ipandatcm.com/18719144415/a82649e617d7-500c1171747f45c5ab0e79c7f1a42c971531982655040.png" /></div>
-			<div class="swiper-slide"><img src="http://test-file.ipandatcm.com/18719144415/a82649e617d7-500c1171747f45c5ab0e79c7f1a42c971531982655040.png" /></div>
-			<div class="swiper-slide"><img src="http://test-file.ipandatcm.com/18719144415/a82649e617d7-500c1171747f45c5ab0e79c7f1a42c971531982655040.png" /></div>
-			<div class="swiper-slide"><img src="http://test-file.ipandatcm.com/18719144415/a82649e617d7-500c1171747f45c5ab0e79c7f1a42c971531982655040.png" /></div>
-		</div>
-		<div class="pagination"></div>
-	</div>
-	<!-- 轮播区域结束 -->
-
 	<!-- tab选项开始 -->
-	<div id="mainMenuBarAnchor"></div>
+	<!-- <div id="mainMenuBarAnchor"></div> -->
 	<div class="size" id="mainMenuBar">
 		<div class="option">
 			<ul>
 				<li class="option_recommend default_click">
-					<img src="/xcview/images/shop/hottest.png" alt="" />推荐
+					<!-- <img src="/xcview/images/shop/hottest.png" alt="" /> -->综合
 				</li>
 				<li class="option_newest">
-					<img src="/xcview/images/shop/newests.png" alt="" />最新
+					<!-- <img src="/xcview/images/shop/newests.png" alt="" /> -->最新
 				</li>
 				<li class="option_hottest">
-					<img src="/xcview/images/shop/hottests.png" alt="" />最热
+					<!-- <img src="/xcview/images/shop/hottests.png" alt="" /> -->最热
 				</li>
 				<li class="option_price">
 					<img src="/xcview/images/shop/prices.png" alt="" />价格
 				</li>
-				<li class="low_to_high">
+				<li class="low_to_high"><!-- 由高到低 -->
 					<img src="/xcview/images/shop/prices.png" alt="" />价格
 				</li>
-				<li class="down">
+				<li class="down"><!-- 由低到高 -->
 					<img src="/xcview/images/shop/prices.png" alt="" />价格
 				</li>
 			</ul>
@@ -134,77 +120,15 @@
 		</ul>
 	</div>
 	<!-- 中间内容结束 -->
-
-	<!-- 底部开始 -->
-	<div class="hidden_field"></div>
-	<div class="footer">
-		<ul>
-			<li>
-				<a href="/xcview/html/physician/index.html" class="physician" style="width: 0.42rem;height: 0.42rem;background: url(/xcview/images/physicians_nav.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-top: 0.14rem;"></a>
-				<p>中医师</p>
-			</li>
-			<li>
-				<a href="home_page.html" class="footer_one"></a>
-				<p>学堂</p>
-			</li>
-			<li>
-				<a href="javascript:;" class="footer_two" onclick="go_study()"></a>
-				<p>学习</p>
-			</li>
-			<li>
-				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;background: url(/xcview/images/discovery_three.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.06rem;"></a>
-				<p>发现</p>
-			</li>
-			<li>
-				<a href="" class="footer_four" style="background: url(/xcview/images/my_fours.png) no-repeat center;background-size: 0.38rem 0.4rem;"></a>
-				<p style="color: #00BC12;">我的</p>
-			</li>
-		</ul>
-	</div>
-	<!-- 底部结束 -->
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
-<!-- <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script> -->
-<!-- <script type="text/javascript" src="/xcview/js/common/common.js"></script> -->
-
-<script src="/xcview/js/shop/jquery-1.10.1.min.js"></script><!-- 轮播引入 -->
-<script src="/xcview/js/shop/swiper.min.js"></script> <!-- 轮播引入 -->
-<!-- 轮播 -->
+<script type="text/javascript" src="/xcview/js/common/mui.min.js"></script> 
+<script type="text/javascript" src="/xcview/js/common/common.js"></script>
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
-
-<!-- 选项卡固定头部 -->
-<script>
- $(document).ready(function() {
-     var $window = $(window),
-         $mainMenuBar = $('#mainMenuBar'),
-         $mainMenuBarAnchor = $('#mainMenuBarAnchor');
-     $window.scroll(function() {
-         //scrollTop()方法返回或设置匹配元素的滚动条的垂直位置
-         var window_top = $window.scrollTop();
-         //javascript用offsetTop();jquery用offset().top;
-         var div_top = $mainMenuBarAnchor.offset().top;
-         if (window_top > div_top) {
-             $mainMenuBar.addClass('stick');
-             $mainMenuBarAnchor.height($mainMenuBar.height());
-         } else {
-             $mainMenuBar.removeClass('stick');
-             $mainMenuBarAnchor.height(0);
-         }
-     });
- });
-</script>
-
 <!-- 选项卡点击事件 -->
 <script>
 	window.onload = function(){
-		// 轮播--渲染时放到，渲染的js下面
-		var mySwiper = new Swiper('.banner',{
-		  	autoplay:1500,
-		  	visibilityFullFit : true,
-		  	loop:true,
-		  	pagination : '.pagination',
-	  	});
-
+		
 		// option_newest--最新    option_recommend--推荐   option_hottest--最热  option_price--价格
 		// 最新
 		$(".option_newest").click();
@@ -213,7 +137,7 @@
 			$(".option_recommend").removeClass("default_click");
 			$(".option_newest img").attr("src","/xcview/images/shop/newest.png");
 			$(".option_recommend").removeClass("default_click");  //推荐
-			$(".option_recommend img").attr("src","/xcview/images/shop/hottests.png");  //由高到低
+			$(".option_recommend img").attr("src","/xcview/images/shop/hottests.png");
 			$(".option_hottest").removeClass("default_click");  //最热
 			$(".option_hottest img").attr("src","/xcview/images/shop/hottests.png");
 			$(".option_newest").removeClass("option_recommend_width");
@@ -289,7 +213,7 @@
 			$(".option_hottest img").attr("src","/xcview/images/shop/hottests.png");
 			$(".low_to_high").hide();
 			$(".down").show();
-			$(".down img").attr("src","/xcview/images/shop/prices-low.png"); //由低到高
+			$(".down img").attr("src","/xcview/images/shop/prices-low.png");
 			$(".option_price").hide();
 			$(".option_newest").addClass("option_newest_width");
 			$(".option_recommend").addClass("option_recommend_width");
