整理--好货模块，我的模块 添加订单中心、学习中心。底部区域修改各个页面跳转

--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -585,11 +585,15 @@ onclick="common_jump_school({{item.watchState}},{{item.type}},{{item.collection?
 				<a href="javascript: ;" class="footer_one" style="background: url(/xcview/images/school_ones.png) no-repeat center;background-size: 0.48rem 0.37rem;margin-top: 0.14rem;"></a>
 				<p style="color: #00BC12;">学堂</p>
 			</li>
-			<li onclick="go_study()">
+			<!-- <li onclick="go_study()">
 				<a href="javascript:;" class="footer_two" style="margin-top: 0.14rem;" onclick="go_study()"></a>
 				<p>学习</p>
+			</li> -->
+			<li onclick="location.href ='/xcview/html/shop/shop.html'">
+				<a href="/xcview/html/shop/shop.html" class="footer_two" style="margin-top: 0.14rem;"></a>
+				<p>好货</p>
 			</li>
-			<li onclick="location.href =/xcview/html/apprentice/apprentice.html'">
+			<li onclick="location.href ='/xcview/html/apprentice/apprentice.html'">
 				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="background-size: 0.42rem 0.42rem;height: 0.42rem;margin-bottom: 0.06rem;"></a>
 				<p>发现</p>
 			</li>
