--- a/wechat/src/main/webapp/xcview/html/physician/index.html
+++ b/wechat/src/main/webapp/xcview/html/physician/index.html
@@ -132,9 +132,6 @@
 		</script>
 	</div>
 
-
-
-
 	<!-- 头部轮播结束 -->
 	
 	<!--头部搜索结束-->
@@ -218,9 +215,13 @@
 				<a href="/xcview/html/home_page.html" class="school" style="background: url(/xcview/images/school_one.png) no-repeat center;background-size: 0.48rem 0.37rem;margin-top: 0.14rem;"></a>
 				<p>学堂</p>
 			</li>
-			<li>
+			<!-- <li>
 				<a href="javascript:;" class="study" onclick="go_study()" style="margin-top: 0.14rem;"></a>
 				<p>学习</p>
+			</li> -->
+			<li onclick="location.href ='/xcview/html/shop/shop.html'">
+				<a href="/xcview/html/shop/shop.html" class="study" style="margin-top: 0.14rem;"></a>
+				<p>好货</p>
 			</li>
 			<li>
 				<a href="/xcview/html/apprentice/apprentice.html" class="discovery" style="background-size: 0.42rem 0.42rem;height: 0.42rem;    margin-top: 0.14rem;"></a>
