--- a/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apprentice.html
@@ -153,9 +153,13 @@
 				<a href="/xcview/html/home_page.html" class="footer_one"></a>
 				<p>学堂</p>
 			</li>
-			<li>
+			<!-- <li>
 				<a href="javascript:;" class="footer_two" onclick="go_study()"></a>
 				<p>学习</p>
+			</li> -->
+			<li>
+				<a href="/xcview/html/shop/shop.html" class="footer_two" onclick="go_study()"></a>
+				<p>好货</p>
 			</li>
 			<li>
 				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;margin-top: 0.14rem; margin-bottom: 0.07rem;background: url(/xcview/images/discovery_threes.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.06rem;"></a>
