--- a/wechat/src/main/webapp/xcview/html/my_homepage.html
+++ b/wechat/src/main/webapp/xcview/html/my_homepage.html
@@ -131,17 +131,31 @@
 		<span class="treatment_number_span"></span>
 		
 	</div>
-	<div class="my_order" onclick="location.href ='my_reservation.html'" style="margin-top: 0;">
-		<div class="anchor_main" style="float: left;width: 5.8rem;margin-left: 0.26rem;">
-			<img src="../images/my_order.png" class="img0 z" style="margin-top: 0.28rem;" />
-			我的预约
-
-			
+	<div class="information">
+		<div class="information_click" onclick="location.href ='/xcview/html/shop/order_center.html'">
+			<div class="good_order">
+				<img src="/xcview/images/indent.png" alt="" />
+				好货订单
+			</div>
+			<img src="../images/account05.png" class="img1 y" style="width: 0.15rem;height: 0.25rem;margin-right: 0.2rem;margin-top: 0.38rem;">
 		</div>
-		<img src="../images/account05.png" class="img1 y" style="width: 0.15rem;height: 0.25rem;margin-right: 0.2rem;margin-top: 0.38rem;" />
-		<span class="number_span" style=""></span>
-		
+		<div class="information_click" onclick="location.href ='/xcview/html/my_study.html'">
+			<div class="good_order">
+				<img src="/xcview/images/shop/learn_two.png" alt="" />
+				学习中心
+			</div>
+			<img src="../images/account05.png" class="img1 y" style="width: 0.15rem;height: 0.25rem;margin-right: 0.2rem;margin-top: 0.38rem;">
+		</div>
+		<div class="my_order" onclick="location.href ='my_reservation.html'" style="margin-top: 0;">
+			<div class="anchor_main" style="float: left;width: 5.8rem;margin-left: 0.26rem;">
+				<img src="../images/my_order.png" class="img0 z" style="margin-top: 0.28rem;" />
+				我的预约
+			</div>
+			<img src="../images/account05.png" class="img1 y" style="width: 0.15rem;height: 0.25rem;margin-right: 0.2rem;margin-top: 0.38rem;" />
+			<span class="number_span" style=""></span>
+		</div>
 	</div>
+	
 	
 	<!--我的消息-->
 	<!--<div class="my_news">
@@ -202,9 +216,13 @@
 				<a href="home_page.html" class="footer_one"></a>
 				<p>学堂</p>
 			</li>
-			<li>
+			<!-- <li>
 				<a href="javascript:;" class="footer_two" onclick="go_study()"></a>
-				<p>学习</p>
+				<p>发现</p>
+			</li> -->
+			<li>
+				<a href="javascript:;" class="footer_two" onclick="location.href ='/xcview/html/shop/shop.html'"></a>
+				<p>好货</p>
 			</li>
 			<li>
 				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;background: url(../images/discovery_three.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.06rem;"></a>
