--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -144,20 +144,24 @@
 				<p>中医师</p>
 			</li>
 			<li>
-				<a href="home_page.html" class="footer_one"></a>
+				<a href="/xcview/html/home_page.html" class="footer_one"></a>
 				<p>学堂</p>
 			</li>
-			<li>
+			<!-- <li>
 				<a href="javascript:;" class="footer_two" onclick="go_study()"></a>
 				<p>学习</p>
+			</li> -->
+			<li>
+				<a href="javascript:;" class="footer_two"></a>
+				<p style="color:#00bc12;">好货</p>
 			</li>
 			<li>
 				<a href="/xcview/html/apprentice/apprentice.html" class="footer_three" style="height: 0.42rem;background: url(/xcview/images/discovery_three.png) no-repeat center;background-size: 0.42rem 0.42rem;margin-bottom: 0.06rem;"></a>
 				<p>发现</p>
 			</li>
 			<li>
-				<a href="" class="footer_four" style="background: url(/xcview/images/my_fours.png) no-repeat center;background-size: 0.38rem 0.4rem;"></a>
-				<p style="color: #00BC12;">我的</p>
+				<a href="/xcview/html/my_homepage.html" class="footer_four" style="background: url(/xcview/images/my_four.png) no-repeat center;background-size: 0.38rem 0.4rem;"></a>
+				<p>我的</p>
 			</li>
 		</ul>
 	</div>
