--- a/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-commentary.html
@@ -89,8 +89,32 @@
 					</div>
 				</div>
 			</div>
-			
-			
+			<!--卖家服务、物流服务-->
+			<div class="seller-logistics">
+				<div class="seller-wrap">
+					<p>卖家服务</p>
+					<div class="select-impress z">  
+				        <img src="/xcview/images/xing1.png" alt="星星" />  
+				       	<img src="/xcview/images/xing1.png" alt="星星" />
+				       	<img src="/xcview/images/xing1.png" alt="星星" />
+				       	<img src="/xcview/images/xing1.png" alt="星星" />
+				       	<img src="/xcview/images/xing1.png" alt="星星" />
+				        <span></span>  
+				    </div> 
+				</div>
+				
+				<div class="seller-wrap">
+					<p>物流服务</p>
+					<div class="select-impress z">  
+				        <img src="/xcview/images/xing1.png" alt="星星" />  
+				       	<img src="/xcview/images/xing1.png" alt="星星" />
+				       	<img src="/xcview/images/xing1.png" alt="星星" />
+				       	<img src="/xcview/images/xing1.png" alt="星星" />
+				       	<img src="/xcview/images/xing1.png" alt="星星" />
+				        <span></span>  
+				    </div> 
+				</div>
+			</div>
 			
 			
 			
