修改专辑大纲bug。修改管理地址bug

--- a/wechat/src/main/webapp/xcview/html/edit_address.html
+++ b/wechat/src/main/webapp/xcview/html/edit_address.html
@@ -178,6 +178,13 @@
 		width: 7.5rem;
 		margin: 0 auto;
 	}
+	.sex_pet_name_top{
+		position: fixed;
+    	top: 0;
+	}
+	.edit{
+		margin-top: 1.05rem;
+	}
 </style>
 
 
