--- a/wechat/src/main/webapp/xcview/html/outline_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/outline_fragment.html
@@ -184,7 +184,7 @@ header {
 				</div>
 				<div class="outline_cen_right">
 					<img src="../images/time_bg0.png" />
-					{{dirtyDate}}
+					{{dirtyDate.replace(/(、)/g,"")}}
 				</div>
 				<div class="both"></div>
 			</div>
