客服底下聊天

--- a/wechat/src/main/webapp/xcview/html/shop/shop-service.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-service.html
@@ -85,17 +85,17 @@
 						<span class="read">已读</span>
 					</div>
 				</div>
-				<!--第二次进来又有发送商品-->
-				
-				
-			
 			</div>
 			
 			
 			
 			
-			
-			
+			<!--输入框-->
+			<div class="bottom-input">
+				<input type="text" name="" id="" value="" />
+				<img class="brow z" src="/xcview/images/brow.png" alt="表情" />
+				<img class="select-img y" src="/xcview/images/select-img.png" alt="选择图片" />
+			</div>
 			
 			
 			
@@ -134,6 +134,10 @@
 		<!--上传照片JS-->
 		<script type="text/javascript" src="/xcview/js/shop/comment-pic-upload.js"></script>
 		<script type="text/javascript" src="/xcview/js/shop/shop-service.js"></script>
-
+		<script>
+//			debugger
+//				var aa=$(document.body).height()-$(".header").height();
+//				$(".chat-content").height(aa/100+"rem");
+		</script>
 	</body>
 </html>
