物流地址加圆圈

--- a/wechat/src/main/webapp/xcview/html/shop/shop-logistics.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop-logistics.html
@@ -76,7 +76,7 @@
 						<li>
 							<span class="location-line z"></span>
 							<p class="address-text z">[收货地址]海南省海口市美兰区 演丰镇瑶城一路D栋心承智慧大厦</p>
-							<span class="location-icon"></span>
+							<span class="location-icon active-icon"></span>
 						</li>
 						<li>
 							<span class="location-line z"></span>
