测试商品列表

--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -34,6 +34,8 @@
 </head>
 
 <body>
+	
+	
 	<!-- 头部区域开始 -->
 	<header>
 		<div class="header" onclick="location.href ='/xcview/html/shop/search_goods.html'">
@@ -88,6 +90,8 @@
 		</div>
 	</div>
 	<!-- tab选项结束 -->
+	<div class="body">
+	<script type="text/html" id="body">
 	<!-- 中间内容开始 -->
 	<div class="main_center">
 		<ul class="list">
@@ -134,7 +138,8 @@
 		</ul>
 	</div>
 	<!-- 中间内容结束 -->
-
+	</script>
+	</div>
 	<!-- 底部开始 -->
 	<div class="hidden_field"></div>
 	<div class="footer">
@@ -168,13 +173,16 @@
 	<!-- 底部结束 -->
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
-<!-- <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script> -->
-<!-- <script type="text/javascript" src="/xcview/js/common/common.js"></script> -->
+<script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
+ <script type="text/javascript" src="/xcview/js/common/common.js"></script>
+ <script src="/xcview/js/shop/shop.js"></script><!-- 数据渲染 -->
 
 <script src="/xcview/js/shop/jquery-1.10.1.min.js"></script><!-- 轮播引入 -->
 <script src="/xcview/js/shop/swiper.min.js"></script> <!-- 轮播引入 -->
 <!-- 轮播 -->
 <script type="text/javascript" src="/xcview/js/common/popups.js"></script>  <!-- 公用弹框 -->
+
+
 
 <!-- 选项卡固定头部 -->
 <script>
