省市区选择增加id返回

--- a/wechat/src/main/webapp/xcview/html/edit_address.html
+++ b/wechat/src/main/webapp/xcview/html/edit_address.html
@@ -287,7 +287,7 @@ function picker2() {
             "value": "text",
             "childData": "children"//最多3级联动
         },//数组内的键名称(必传，id、text、data)
-        "callBack": function (val) {
+        "callBack": function (val,b) {
             //回调函数（val为选择的值）
 			$("#cityP").html(val);
         }
