好货主页列表添加刷新效果

--- a/wechat/src/main/webapp/xcview/html/shop/shop.html
+++ b/wechat/src/main/webapp/xcview/html/shop/shop.html
@@ -35,7 +35,7 @@
 <style>
 	/*处理刷新*/
 	.minirefresh-wrap{
-		top: 1.1rem;
+		top: 5rem;
 	}
 	.minirefresh-theme-default .minirefresh-downwrap{
 		height: 1rem;
@@ -49,13 +49,12 @@
 		max-height: 0.5rem;
 		line-height: 0.6rem;
 		padding: 0;
-		/*margin-top: -0.5rem;*/
 	}
 	.minirefresh-scroll{
 		background: none;
 	}
-	.more_people{
-		/*display: none;*/
+	.minirefresh-wrap{
+		bottom: .98rem;
 	}
 </style>
 </head>
